# maoxuan-knowledge

./: .dockerignore  .env.example  .gitignore  README.md  build.sh  docker-compose.yml  export.sh
backend/: Dockerfile  entrypoint.sh  pyproject.toml  setup.py
backend/app/: crud.py  database.py  main.py  models.py  schemas.py
backend/app/api/: articles.py  book.py  entities.py  events.py  graph.py  ideas.py  map.py  search.py
backend/scripts/: init_db.py  sync.py
data/book/: 000-中国社会各阶级的分析.md
data/processed/: 000-中国社会各阶级的分析.json  001-湖南农民运动考察报告.json  002-中国的红色政权为什么能够存在？.json  003-井冈山的斗争.json  005-星星之火，可以燎原.json  006-反对本本主义.json  007-必须注意经济工作.json  008-怎样分析农村阶级.json  009-我们的经济政策.json  010-关心群众生活，注意工作方法.json  011-论反对日本帝国主义的策略.json  012-中国革命战争的战略问题.json  013-关于蒋介石声明的声明.json  014-中国共产党在抗日时期的任务.json  015-为争取千百万群众进入抗日民族统一战线而斗争.json  016-实践论.json  017-矛盾论.json
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/components/: ArticleTOC.tsx  EntityBadge.tsx  EventDetailPanel.tsx  GraphView.tsx  IdeaCard.tsx  MapView.tsx  TimelineChart.tsx
frontend/src/pages/: ArticlePage.tsx  DisclaimerPage.tsx  GraphPage.tsx  GuidePage.tsx  IssuePage.tsx  MapPage.tsx  SearchPage.tsx  TimelinePage.tsx
frontend/src/types/: china-map-geojson.d.ts  index.ts
frontend/src/utils/: labels.ts
