[project]
name = "maoxuan-knowledge-backend"
version = "0.1.0"
description = "FastAPI backend for MaoXuan Knowledge Timeline"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.111.0",
  "sqlmodel>=0.0.21",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.uvicorn]
factory = false
